# ggp_robot

./: CMakeLists.txt  README  depth.yaml  package.xml  rgb.yaml
cmake_modules/: FindOpenCV2.cmake
include/ggp_robot/: vision_controller_node.h
include/ggp_robot/libs/: board.h  board_old.h  chessboard.h  debug.h  factories.h  factory_includes.h  factoryclass.h  vision_controller.h
include/ggp_robot/libs/boardRec/: board_recognition.h  chessboardrec1.h  chessboardrec2.h
include/ggp_robot/libs/boards/: board.h  boardpoint.h  chessboard1.h
include/ggp_robot/libs/cameras/: camera.h  xtion.h
include/ggp_robot/libs/stateRec/: board.h  chessstaterec1.h  chessstaterec2.h  chessstaterec3.h  corrgroup.h  state_recognition.h
include/ggp_robot/libs/tools/: debug.h  factories.h  factoryclass.h  keylistener.h
launch/: get_xyzrgb.launch  vision_controller.launch  xtion.launch
scripts/: .matching.py.swp  matching.py
src/: .chessboard_test.cpp.swp  .feature_test.cpp.swp  .orb_test.cpp.swp  .process_cloud.cpp.swp  .vision_controller_node.cpp.swo  board_recognition.cpp  brec_tmpcopy.cpp  chessboard_test.cpp  cloudview_rgbd.cpp  cluster_extraction.cpp  feature_test.cpp  orb_test.cpp  orb_test2.cpp  pclview_rgbd.cpp  process_cloud.cpp  vision_controller.cpp  vision_controller_node.cpp
src/libs/: board.cpp  board_old.cpp  chessboard.cpp  vision_controller.cpp
src/libs/boardRec/: board_recognition.cpp  chessboardrec1.cpp  chessboardrec2.cpp
src/libs/boards/: board.cpp  boardpoint.cpp  chessboard1.cpp
src/libs/cameras/: camera.cpp  xtion.cpp
src/libs/stateRec/: chessstaterec1.cpp  chessstaterec2.cpp  chessstaterec3.cpp  corrgroup.cpp  state_recognition.cpp
srv/: GetState.srv
